@@ -92,6 +92,10 @@ class TeamDashboardControllerTest extends ControllerTest {
         teamDashboardUpdateReqDto = new TeamDashboardUpdateReqDto("updateTitle", "updateDescription");
         teamDashboard = teamDashboardSaveReqDto.toEntity(member);
 
+        ReflectionTestUtils.setField(teamDashboard, "id", 1L);
+        ReflectionTestUtils.setField(member, "id", 1L);
+        ReflectionTestUtils.setField(teamDashboard, "member", member);
+
         teamDashboardController = new TeamDashboardController(teamDashboardService);
 
         mockMvc = MockMvcBuilders.standaloneSetup(teamDashboardController)
@@ -190,17 +194,11 @@ class TeamDashboardControllerTest extends ControllerTest {
     @Test
     void 팀_대시보드_전체_조회() throws Exception {
         // given
-        Page<TeamDashboard> teamDashboardPage = new PageImpl<>(
-                List.of(teamDashboard),
-                PageRequest.of(0, 10),
-                1
-        );
-        TeamDashboardListResDto response = TeamDashboardListResDto.of(
-                Collections.singletonList(TeamDashboardInfoResDto.of(member, teamDashboard)),
-                PageInfoResDto.from(teamDashboardPage)
+        TeamDashboardListResDto response = TeamDashboardListResDto.from(
+                Collections.singletonList(TeamDashboardInfoResDto.of(member, teamDashboard))
         );
 
-        given(teamDashboardService.findForTeamDashboard(anyString(), any())).willReturn(response);
+        given(teamDashboardService.findForTeamDashboard(anyString())).willReturn(response);
 
         // when & then
         mockMvc.perform(get("/api/dashboards/team/")
@@ -230,9 +228,8 @@ class TeamDashboardControllerTest extends ControllerTest {
                                         .description("팀 대시보드의 완료된 블록 진행률"),
                                 fieldWithPath("data.teamDashboardInfoResDto[].joinMembers")
                                         .description("팀 대시보드에 참여한 사용자"),
-                                fieldWithPath("data.pageInfoResDto.currentPage").description("현재 페이지"),
-                                fieldWithPath("data.pageInfoResDto.totalPages").description("전체 페이지"),
-                                fieldWithPath("data.pageInfoResDto.totalItems").description("전체 아이템")
+                                fieldWithPath("data.pageInfoResDto")
+                                        .description("페이지 정보가 없습니다.")
                         )
                 ))
                 .andExpect(status().isOk());
